REGRESSION (r180582): background-attachment: local; does not scroll the background image when scrolling the the element's contents https://bugs.webkit.org/show_bug.cgi?id=146623

Reviewed by Zalan Bujtas.

Source/WebCore:

r180582 erroneously asserted that m_destOrigin in BackgroundImageGeometry was unused.
However, it is needed to compute the correct phase when the destination rect is
altered by clipping.

Test: fast/backgrounds/background-attachment-local.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):
(WebCore::RenderBoxModelObject::calculateBackgroundImageGeometry):
* rendering/RenderBoxModelObject.h:
(WebCore::BackgroundImageGeometry::BackgroundImageGeometry):
(WebCore::BackgroundImageGeometry::relativePhase):
* rendering/svg/RenderSVGResourceMasker.cpp:
(WebCore::RenderSVGResourceMasker::drawMaskForRenderer):

LayoutTests:

Ref test for background-attachment: local.

* fast/backgrounds/background-attachment-local-expected.html: Added.
* fast/backgrounds/background-attachment-local.html: Added.


Canonical link: https://commits.webkit.org/164711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186299 268f45cc-cd09-0410-ab3c-d52691b4dbfc